Integrate Flash News App as native sub-route /flashnews

--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,12 @@
 {
   "rewrites": [
-    { "source": "/api/(.*)", "destination": "/api/index.py" }
+    {
+      "source": "/flashnews/(.*)",
+      "destination": "/api/flashnews/index.py"
+    },
+    {
+      "source": "/api/(.*)",
+      "destination": "/api/index.py"
+    }
   ]
 }
