Refine flashnews routing in vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "rewrites": [
     {
-      "source": "/flashnews/(.*)",
+      "source": "/flashnews(.*)",
       "destination": "/api/flashnews/index.py"
     },
     {
